kubernetes/yaml/istio/sample/v3/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - "demo.ops.com"
  gateways:
    - gateway
  http:
  - route:
    - destination:
        host: nginx.ops.svc.cluster.local
        subset: app-group-v1
      weight: 80
    - destination:
        host: nginx.ops.svc.cluster.local
        subset: app-group-v2
      weight: 20
